# challenge-lexmax

./: .env.template  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt
lexmax/: asgi.py  settings.py  urls.py  wsgi.py
lexmax/api/: urls.py
lexmax/api/serializers/: customer.py
lexmax/api/views/: customer.py
lexmax/customer/: admin.py  apps.py  models.py
lexmax/customer/migrations/: 0001_initial.py  0002_alter_customer_address_alter_customer_phone_and_more.py
